--- a/index.html
+++ b/index.html
@@ -6,6 +6,24 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <h1>Hello world</h1>
+        <header>
+            <nav>
+                <ul>
+                    <li>Home</li>
+                    <li>Experience</li>
+                    <li>School</li>
+                    <li>Visit</li>
+                    <li>About</li>
+                    <li>Tickets</li>
+                </ul>
+            </nav>
+
+        </header>
+        <main>
+
+        </main>
+        <footer>
+
+        </footer>
     </body>
 </html>
