--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <header>
             <nav>
                 <ul>
-                    <li>Experience</li>
+                    <li><a href="index.html">home</a></li>
                     <li>School</li>
                     <li>Visit</li>
                     <li>About</li>
