--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
         <header>
             <nav>
                 <ul>
-                    <li><a href="index.html">home</a></li>
-                    <li>School</li>
-                    <li>Visit</li>
-                    <li>About</li>
-                    <li>Tickets</li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="experience.html">Experience</a></li>
+                    <li><a href="school.html">School</a></li>
+                    <li><a href="visit.html">Visit</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="tickets.html">Tickets</a></li>
+                    
                 </ul>
             </nav>
 
