--- a/classLevel.html
+++ b/classLevel.html
@@ -4,6 +4,8 @@
         <title>Community Science Museum</title>
         <meta name="description" content="A page about museum">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="CSS/styles.css"/>
+        
     </head>
     <body>
         <header>
