--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         </header>
         <main>
             <h1>home</h1>
+            <img src="Front-space.jpg">
         </main>
         <footer>
             Copyright &copy;
