--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <meta name="description" content="A page about museum">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8"/>
-        <link rel="stylesheet" href="CSS/styles.css"/>
+
+        <link href="CSS/styles.css" rel="stylesheet">
 
     </head>
     <body>
