--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
     </head>
     <body>
         <header>
+                   
+      <a href="index.html">
+        <div class="logo-top">
+            <img src="images/LOGO.png" alt="Logo of Community Science Museum" width="150px">
+          </a>
+          </div>
+
+
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
