--- a/school.html
+++ b/school.html
@@ -10,6 +10,11 @@
     </head>
     <body>
         <header>
+            <a href="index.html">
+                <div class="logo-top">
+                    <img src="images/LOGO.png" alt="Logo of Community Science Museum" width="250px">
+                  </a>
+                  </div>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
