--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
         </header>
         <main>
+            <img src="images/Front-space.jpg" alt="space-man">
             <h1>home</h1>
            
         </main>
