--- a/experience.html
+++ b/experience.html
@@ -28,6 +28,7 @@
 
         </header>
         <main>
+            <img src="images/scientifi.jpg" alt="girl with glasses science">
             <h1>Experience</h1>
         </main>
         <footer>
