--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         </header>
         <main>
-            <img src="images/Front-space.jpg" alt="space-man">
+            <img src="images/Front-space.jpg" alt="space-man" class="logo">
             <h1>home</h1>
            
         </main>
