--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                    
       <a href="index.html">
         <div class="logo-top">
-            <img src="images/LOGO.png" alt="Logo of Community Science Museum" width="250px">
+            <img src="images/LOGO.png" alt="Logo of Community Science Museum" class="logo">
           </a>
           </div>
 
@@ -33,7 +33,7 @@
 
         </header>
         <main>
-            <img src="images/Front-space.jpg" alt="space-man" class="logo">
+            <img src="images/Front-space.jpg" alt="space-man">
             <h1>home</h1>
            
         </main>
