--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                    
       <a href="index.html">
         <div class="logo-top">
-            <img src="images/LOGO.png" alt="Logo of Community Science Museum" class="logo">
+            <img src="images/LOGO2.png" alt="Logo of Community Science Museum" class="logo">
           </a>
           </div>
 
