--- a/classLevel.html
+++ b/classLevel.html
@@ -12,7 +12,7 @@
         <header>
             <a href="index.html">
                 <div class="logo-top">
-                    <img src="images/LOGO.png" alt="Logo of Community Science Museum" width="250px">
+                    <img src="images/LOGO2.png" alt="Logo of Community Science Museum" class="logo">
                   </a>
                   </div>
             <nav>
