--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
         </header>
         <main>
+            <img src="images/Planet.jpg" alt="Different planets">
             
             <h1>home</h1>
            
