--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="img-front">
             <img src="images/dino.jpg" alt="exhibition of dinosaur bones in stairwell">
             <img src="images/elephant.jpg" alt="elephant with light in hall">
-            <img src="images/scell.jpg" alt="Exhibition of our body skeleton">
+            <img src="images/window.jpg" alt="Exhibition of our body skeleton">
             
 
 
