--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             
             <img src="images/Planet.jpg" alt="Different planets">
 
-            <div class="img-front">
+            <div class="img-front1">
             <img src="images/dino.jpg" alt="exhibition of dinosaur bones in stairwell">
             <img src="images/elephant.jpg" alt="elephant with light in hall">
             <img src="images/window.jpg" alt="Exhibition of our body skeleton">
