--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
                 </ul>
             </nav>
 
-            <img src="images/Front-space.jpg" alt="space-man">
+
+          <div class="header">
+             <img src="images/Front-space.jpg" alt="space-man">
+          </div>
+           
 
 
         </header>
