--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </nav>
 
 
-          <div class="header">
+          <div class="img-header">
              <img src="images/Front-space.jpg" alt="space-man">
           </div>
            
