--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <img src="images/window.jpg" alt="Exhibition of our body skeleton">
             </div>
             
-            <h1>home</h1>
+            <h1>What happens</h1>
            
         </main>
         <footer>
