--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             </div>
             
             <h1>What happens</h1>
+            <img src="images/red.jpg" alt="girl with vr-glasses in red">
            
         </main>
         <footer>
