--- a/index.html
+++ b/index.html
@@ -56,8 +56,16 @@
         </div>
            
         </main>
+
         <footer>
             Copyright &copy;
+            <p>Follow us</p> 
+            <div class="img-icons">
+                <img src="images/facebook.jpg" alt="Icon of facebook">
+                <img src="images/Instagram.jpg" alt="Icon of Instagram">
+                <img src="images/Tvitter.jpg" alt="Icon of Tvitter">
+                <img src="images/Snapchat.jpg" alt="Icon of Snapchat">
+            </div>
         </footer>
     </body>
 </html>
