--- a/index.html
+++ b/index.html
@@ -65,8 +65,11 @@
                 <img src="images/Tvitter.jpg" alt="Icon of Tvitter">
                 <img src="images/Snapchat.jpg" alt="Icon of Snapchat">
             </div>
-
-            <img src="images/LOGO2.png" alt="Logo of Community Science Museum" class="logo">
+            
+<div class="img-logobottom">
+    <img src="images/LOGO2.png" alt="Logo of Community Science Museum" class="logo">
+</div>
+           
 <p>Adress and phone</p>
 <p>Do you have question or want to give us feedback? We are happy to hear from you. Email us: </p>
             Copyright &copy;
