--- a/visit.html
+++ b/visit.html
@@ -32,6 +32,20 @@
             <h1>Visit</h1>
         </main>
         <footer>
+            <p>Follow us</p> 
+            <div class="img-icons">
+                <img src="images/facebook.jpg" alt="Icon of facebook">
+                <img src="images/Instagram.jpg" alt="Icon of Instagram">
+                <img src="images/Tvitter.jpg" alt="Icon of Tvitter">
+                <img src="images/Snapchat.jpg" alt="Icon of Snapchat">
+            </div>
+            
+<div class="img-logobottom">
+    <img src="images/LOGO2.png" alt="Logo of Community Science Museum" class="logo">
+</div>
+           
+<p>Adress and phone</p>
+<p>Do you have question or want to give us feedback? We are happy to hear from you. Email us: </p>
             Copyright &copy;
         </footer>
     </body>
