--- a/experience.html
+++ b/experience.html
@@ -25,7 +25,9 @@
                 </ul>
             </nav>
 
-            <img src="images/scientifi.jpg" alt="girl with glasses science">
+            <div class="img-header">
+                <img src="images/scientifi.jpg" alt="girl with glasses Science">
+             </div>
 
         </header>
         <main>
