--- a/school.html
+++ b/school.html
@@ -15,7 +15,8 @@
                     <img src="images/LOGO2.png" alt="Logo of Community Science Museum" class="logo">
                   </a>
                   </div>
-
+                  
+             <h1>Class step</h1>
              <input type="radio" name="age" value="1-4" id="1-4"><label for="1-4">1-4</label>
              <input type="radio" name="age" value="5-7" id="5-7"><label for="5-7">5-7</label>
              <input type="radio" name="age" value="8-10" id="8-10"><label for="8-10">8-10</label>
