--- a/school.html
+++ b/school.html
@@ -36,7 +36,12 @@
             <input type="radio" name="age" value="5-7" id="5-7"><label for="5-7">5-7 step</label>
             <input type="radio" name="age" value="8-10" id="8-10"><label for="8-10">8-10 step</label>
 
-            <img src="images/blueandpink.jpg" alt="room with pink giraffe and blue rocket">
+
+
+            <div class="img-pinkblue">
+                <img src="images/blueandpink.jpg" alt="room with pink giraffe and blue rocket">
+            </div>
+           
         </main>
         <footer>
             <p>Follow us</p> 
