--- a/school.html
+++ b/school.html
@@ -41,6 +41,10 @@
             <div class="img-pinkblue">
                 <img src="images/blueandpink.jpg" alt="room with pink giraffe and blue rocket">
             </div>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+             Molestiae sit explicabo maiores laudantium minus officiis esse ullam 
+             possimus nemo laborum velit aliquam impedit debitis autem quibusdam cum, nobis natus fuga.</p>
            
         </main>
         <footer>
