--- a/school.html
+++ b/school.html
@@ -44,7 +44,13 @@
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
              Molestiae sit explicabo maiores laudantium minus officiis esse ullam 
-             possimus nemo laborum velit aliquam impedit debitis autem quibusdam cum, nobis natus fuga.</p>
+             possimus nemo laborum velit aliquam impedit debitis autem quibusdam cum, 
+             nobis natus fuga.</p>
+
+             <div class="img-school">
+                 <img src="images/Ant.jpg" alt="big ant in glass">
+                 <img src="images/web.jpg" alt="web">
+             </div>
            
         </main>
         <footer>
