--- a/visit.html
+++ b/visit.html
@@ -23,9 +23,12 @@
                     <li><a href="visit.html">Visit</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="tickets.html">Tickets</a></li>
-                    
                 </ul>
             </nav>
+
+            <div class="img-header">
+                <img src="images/musum.jpg" alt="sign of the museum">
+             </div>
 
         </header>
         <main>
