--- a/visit.html
+++ b/visit.html
@@ -29,6 +29,9 @@
             <div class="img-header">
                 <img src="images/musum.jpg" alt="sign of the museum">
              </div>
+             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus doloremque nisi 
+                 numquam hic quidem vel, soluta earum corporis quas iusto neque sit maiores iure eligendi,
+                eius, quam rerum blanditiis eveniet.</p>
 
         </header>
         <main>
