--- a/visit.html
+++ b/visit.html
@@ -35,6 +35,15 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus doloremque nisi 
                 numquam hic quidem vel, soluta earum corporis quas iusto neque sit maiores iure eligendi,
                eius, quam rerum blanditiis eveniet.</p>
+
+               <div class="img-visit">
+                   <img src="images/heart-2607178_1920.jpg" alt="Heart science">
+                   <img src="images/man.jpg" alt="boy looking in telescope">
+                   <img src="images/glass.jpg" alt="display in museum">
+                   <img src="images/scell.jpg" alt="three skeletons">
+                   <img src="images/teacher.jpg" alt="teacher cartoon">
+                   <img src="images/ball.jpg" alt="balls">
+               </div>
            
         </main>
         <footer>
