--- a/about.html
+++ b/about.html
@@ -22,9 +22,11 @@
                     <li><a href="visit.html">Visit</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="tickets.html">Tickets</a></li>
-                    
                 </ul>
             </nav>
+            <div class="img-header">
+                <img src="images/Front-space.jpg" alt="space-man">
+             </div>
 
         </header>
         <main>
