--- a/tickets.html
+++ b/tickets.html
@@ -22,10 +22,12 @@
                     <li><a href="school.html">School</a></li>
                     <li><a href="visit.html">Visit</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="tickets.html">Tickets</a></li>
-                    
+                    <li><a href="tickets.html">Tickets</a></li>  
                 </ul>
             </nav>
+            <div class="img-header">
+                <img src="images/Front-space.jpg" alt="space-man">
+             </div>
 
         </header>
         <main>
