--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Community Science Museum</title>
-        <meta name="description" content="A page about museum">
+        <meta name="description" content="Welcome to our homepage">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8"/>
 
