--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Community Science Museum</title>
-        <meta name="description" content="A page about museum">
+        <meta name="description" content="Get to know us">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8"/>
         <link href="CSS/styles.css" rel="stylesheet">
