--- a/tickets.html
+++ b/tickets.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Community Science Museum</title>
-        <meta name="description" content="A page about museum">
+        <meta name="description" content="Buy tickets to our museum">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8"/>
 
