--- a/classLevel.html
+++ b/classLevel.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Community Science Museum</title>
-        <meta name="description" content="A page about museum">
+        <title>1-4 step</title>
+        <meta name="description" content="What to do for students 1-4 step">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8"/>
         <link href="CSS/styles.css" rel="stylesheet">
