--- a/experience.html
+++ b/experience.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Community Science Museum</title>
+        <title>What to experience in the museum</title>
         <meta name="description" content="Some of the things we have at our museum">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8"/>
