--- a/tickets.html
+++ b/tickets.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Community Science Museum</title>
+        <title>Tickets</title>
         <meta name="description" content="Buy tickets to our museum">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8"/>
