--- a/visit.html
+++ b/visit.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Community Science Museum</title>
+        <title>Visit us</title>
         <meta name="description" content="Come and visit us">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8"/>
