--- a/index.html
+++ b/index.html
@@ -50,11 +50,10 @@
             <img src="images/dino.jpg" alt="exhibition of dinosaur bones in stairwell">
             <img src="images/elephant.jpg" alt="elephant with light in hall">
             <img src="images/window.jpg" alt="Exhibition of our body skeleton">
-            <h1>What happens</h1>
+            <h1>Special Events and Exhibitions</h1>
+            <h2>News</h2>
             <img src="images/red.jpg" alt="girl with vr-glasses in red">
-            <p>Special Events and Exhibitions
-                News
-                Visiting Professor of Aeronautics
+            <p> Visiting Professor of Aeronautics
                 It is our pleasure to announce that Prof Sheila Widnall from the Massachusetts Institute of Technology will be delivering 3 lectures on the development of aeronautics and where the future lies in this exciting ‘space’.
                 Night in the Museum
                 Get your family together for an exciting night in the museum as you sleep over beside dinosaurs and science displays. Bring your own sleeping bag and get ready to rough it as we go exploring the wonders of science.
