--- a/index.html
+++ b/index.html
@@ -53,8 +53,11 @@
             <h1>News</h1>
             <h2>Special Events and Exhibitions</h2>
             <img src="images/red.jpg" alt="girl with vr-glasses in red">
-            <p> Visiting Professor of Aeronautics
-                It is our pleasure to announce that Prof Sheila Widnall from the Massachusetts Institute of Technology will be delivering 3 lectures on the development of aeronautics and where the future lies in this exciting ‘space’.
+            <h2>Visiting Professor of Aeronautics</h2>
+                <p>It is our pleasure to announce that Prof Sheila Widnall 
+                    from the Massachusetts Institute of Technology will be delivering 
+                    3 lectures on the development of aeronautics and where the future lies 
+                    in this exciting ‘space’.</p>
                 Night in the Museum
                 Get your family together for an exciting night in the museum as you sleep over beside dinosaurs and science displays. Bring your own sleeping bag and get ready to rough it as we go exploring the wonders of science.
                 Energetica Exhibition on Loan
