--- a/about.html
+++ b/about.html
@@ -86,11 +86,31 @@
             <h3>Food and drink</h3>
             <p>There is a café attached to the museum where you can get light lunches, 
                 soft drinks, coffee, snacks and more.</p>
-                
+
             <h3>Shop</h3>
             <p>Our shop offers a range of memorabilia from the museum as well as great
                gifts and activity packs that allow you to continue to explore science even 
                after you’ve left the museum.</p>
+
+            <h1>Get Involved</h1>
+            <h2>Support</h2>
+            <p>There are various ways you can support the museum. Donations are
+                very welcome and are an important way we keep this museum open and accessible 
+                to the whole community. 
+                You can also support us by donating items of interest to the museum’s collections. 
+                If you have some item or collection that you think others would enjoy, 
+                please let us know by contacting our Collections Department and they 
+                will be able to assist you.
+                </p>
+            <h2>Volunteer</h2>
+            <p>A number of people volunteer their time and effort to keep the displays 
+                in good order and ready for visitors to come and enjoy. Volunteering has 
+                its perks including getting to see behind the scenes of a working museum, 
+                access to staff-only lectures, and a monthly lunch where all staff and volunteers 
+                come together to discuss ideas for future exhibits and strategies for the museum.
+                You can help volunteer in a number of different spheres. Please contact us if you’d 
+                like to find out more about how you can get involved.
+                </p>
             
         </main>
         <footer>
