--- a/about.html
+++ b/about.html
@@ -111,6 +111,13 @@
                 You can help volunteer in a number of different spheres. Please contact us if you’d 
                 like to find out more about how you can get involved.
                 </p>
+             <h2>Internships</h2> 
+             <p>Are you interested in working in a museum? Do you enjoy the fun and excitement 
+                of sharing the wonders of nature with people? Well you could be just the right 
+                person to enjoy an internship at the museum.
+                You’ll be learning from a number of different academics and people who are
+                passionate about science and sharing it with the wider community.
+                </p>  
             
         </main>
         <footer>
