--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                 <img src="images/LOGO2.png" alt="Logo of Community Science Museum" class="logo">
                </div>
 
-            <p>Follow us</p>
-            
+            <h2>Follow us</h2>
+
             <div class="img-icons">
                 <img src="images/facebook.jpg" alt="Icon of facebook">
                 <img src="images/Instagram.jpg" alt="Icon of Instagram">
@@ -88,7 +88,7 @@
                 <img src="images/Snapchat.jpg" alt="Icon of Snapchat">
             </div>
 
-            <h2>Opening Hours</h2>
+            <h3>Opening Hours</h3>
             <p>Monday: Closed
                 Tuesday: 10:00 – 16:00
                 Wednesday: 10:00 – 16:00
@@ -98,13 +98,13 @@
                 Sunday: 9:00 – 13:00
                 </p>
 
-            <h2>Adress and phone</h2>
+            <h3>Adress and phone</h3>
             <p>Sunshinestreet 71
                5001 Bergen 
                Phone 00664488
             </p>
 
-            <h2>Do you have question or want to give us feedback?</h2>
+            <h3>Do you have question or want to give us feedback?</h3>
             <p>We are happy to hear from you. Email us: Communitysciencemuseum@gmail.com</p>
             
             Copyright &copy;
