--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
 
             <h3>Adress and phone</h3>
             <p>Sunshinestreet 71
-               5001 Bergen 
-               Phone 00664488
-            </p>
+               5001 Bergen</p>
+            <p>Phone 00664488</p>
+            
 
             <h3>Do you have question or want to give us feedback?</h3>
             <p>We are happy to hear from you. Email us: Communitysciencemuseum@gmail.com</p>
