--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html" class="current">Home</a></li>
                     <li><a href="experience.html">Experience</a></li>
                     <li><a href="school.html">School</a></li>
                     <li><a href="visit.html">Visit</a></li>
