--- a/experience.html
+++ b/experience.html
@@ -17,7 +17,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="experience.html">Experience</a></li>
+                    <li><a href="experience.html" class="current">Experience</a></li>
                     <li><a href="school.html">School</a></li>
                     <li><a href="visit.html">Visit</a></li>
                     <li><a href="about.html">About</a></li>
