--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
                     <li><a href="experience.html">Experience</a></li>
                     <li><a href="school.html">School</a></li>
                     <li><a href="visit.html">Visit</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li><a href="about.html" class="current">About</a></li>
                 </ul>
             </nav>
             
@@ -32,7 +32,7 @@
                 <img src="images/Front-space.jpg" alt="space-man">
              </div>
 
-             
+
             <h1>Explore together</h1>
             <p> Come join us at the Community Science Museum where we’re committed to making science 
                 accessible to all.
