--- a/visit.html
+++ b/visit.html
@@ -20,7 +20,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="experience.html">Experience</a></li>
                     <li><a href="school.html">School</a></li>
-                    <li><a href="visit.html">Visit</a></li>
+                    <li><a href="visit.html" class="current">Visit</a></li>
                     <li><a href="about.html">About</a></li>
                 </ul>
             </nav>
@@ -31,7 +31,7 @@
             <div class="img-header">
                 <img src="images/musum.jpg" alt="sign of the museum">
              </div>
-             
+
             <h1>Visit us</h1>
             <h2>Exhibition Spaces</h2>
                 <h3>Cosmology</h3>
