--- a/school.html
+++ b/school.html
@@ -32,7 +32,7 @@
         <main>
             <h1>Class step</h1>
 
-            <form action="classLevel.html"> <input type="radio" name="age" value="1-4" id="1-4"></form><label for="1-4">1-4 step</label>
+            <form action="classLevel.html"> <input type="radio" name="age" value="1-4" id="1-4"><label for="1-4">1-4 step</label></form>
             <input type="radio" name="age" value="5-7" id="5-7"><label for="5-7">5-7 step</label>
             <input type="radio" name="age" value="8-10" id="8-10"><label for="8-10">8-10 step</label>
 
