--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <h2>Follow us</h2>
 
             <div class="img-icons">
-                <img src="images/facebook.jpg" alt="Icon of facebook">
+                <img src="images/facebook.jpg" alt="Icon of facebook" class="floated_right"/>
                 <img src="images/Instagram.jpg" alt="Icon of Instagram">
                 <img src="images/Tvitter.jpg" alt="Icon of Tvitter">
                 <img src="images/Snapchat.jpg" alt="Icon of Snapchat">
