--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
 
             <div class="img-icons">
                 <img src="images/facebook.jpg" alt="Icon of facebook" class="floated_right"/>
-                <img src="images/Instagram.jpg" alt="Icon of Instagram">
-                <img src="images/Tvitter.jpg" alt="Icon of Tvitter">
-                <img src="images/Snapchat.jpg" alt="Icon of Snapchat">
+                <img src="images/Instagram.jpg" alt="Icon of Instagram" class="floated_right"/>
+                <img src="images/Tvitter.jpg" alt="Icon of Tvitter" class="floated_right"/>
+                <img src="images/Snapchat.jpg" alt="Icon of Snapchat" class="floated_right"/>
             </div>
 
             <h3>Opening Hours</h3>
