--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
             
 
             <h3>Adress and phone</h3>
-            <p>Sunshinestreet 71</p>
-            <p>5001 Bergen</p>
-            <p>00664488</p>
+            <p>Sunshinestreet 71
+            5001 Bergen
+            00664488 </p>
             
 
             <h3>Do you have question or want to give us feedback?</h3>
