--- a/index.html
+++ b/index.html
@@ -110,9 +110,11 @@
             <p>Sunshinestreet 71 5001 Bergen 00664488 </p>
         </div>
             
-
+<div class="item">
             <h3>Do you have question or want to give us feedback?</h3>
             <p>Email us: Communitysciencemuseum@gmail.com</p>
+        </div>
+        
         </section>
             Copyright &copy;
         </footer>
