--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
 
             <div class="item">
             <h3>Adress and phone</h3>
-            <p>Sunshinestreet 71 5001 Bergen 00664488 </p>
+            <p>Sunshinestreet 71</p>
+            <p>5001 Bergen 00664488</p>
         </div>
             
 <div class="item">
