--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
         </div>
             
 <div class="item">
-            <h3>Do you have question or want to give us feedback?</h3>
+            <h3>Do you have question?</h3>
+            <p>We are happy to hear from you</p>
             <p>Email us: Communitysciencemuseum@gmail.com</p>
         </div>
 
