--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
           
                    
       <a href="index.html">
-        <div class="logo-top" class="floated_left">
-            <img src="images/LOGO2.png" alt="Logo of Community Science Museum" class="logo">
+        <div class="logo-top">
+            <img src="images/LOGO2.png" alt="Logo of Community Science Museum">
           </a>
           </div>
 
@@ -79,10 +79,10 @@
         <h2>Follow us</h2>
 
             <div class="img-icons">
-                <img src="images/facebook.jpg" alt="Icon of facebook" class="floated_right"/>
-                <img src="images/Instagram.jpg" alt="Icon of Instagram" class="floated_right"/>
-                <img src="images/Tvitter.jpg" alt="Icon of Tvitter" class="floated_right"/>
-                <img src="images/Snapchat.jpg" alt="Icon of Snapchat" class="floated_right"/>
+                <img src="images/facebook.jpg" alt="Icon of facebook">
+                <img src="images/Instagram.jpg" alt="Icon of Instagram">
+                <img src="images/Tvitter.jpg" alt="Icon of Tvitter">
+                <img src="images/Snapchat.jpg" alt="Icon of Snapchat">
             </div>
 
             <h3>Opening Hours</h3>
