--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@
 </div>
             </section>
 
+
+<section class="container_opening">
+
+
             <h3>Opening Hours</h3>
             <p>Monday: Closed</p>
             <p>Tuesday: 10:00 – 16:00</p>
@@ -100,6 +104,8 @@
             <p>Friday: 10:00 – 19:00</p>
             <p>Saturday: 9:00 – 16:00</p>
             <p>Sunday: 9:00 – 13:00</p>
+
+        </section>
            
         </main>
 
