--- a/classLevel.html
+++ b/classLevel.html
@@ -28,7 +28,13 @@
 
         </header>
         <main>
+
             <h1>Learning possibilities</h1>
+
+        <img src="images/math.jpg" alt="girl looking at blackboard">
+
+
+
 
            
 <section class="container_follow">
