--- a/classLevel.html
+++ b/classLevel.html
@@ -31,7 +31,7 @@
 
             <h1>Learning possibilities</h1>
 
-        <img src="images/math.jpg" alt="girl looking at blackboard">
+        <img src="images/math.jpg" alt="girl looking at blackboard" class="math">
 
 
 
