--- a/classLevel.html
+++ b/classLevel.html
@@ -29,7 +29,7 @@
         </header>
         <main>
 
-            <h1>Learning possibilities</h1>
+            <h1>Learning possibilities 1-4 step</h1>
 
         <img src="images/math.jpg" alt="girl looking at blackboard" class="math">
 
