--- a/classLevel.html
+++ b/classLevel.html
@@ -29,9 +29,18 @@
         </header>
         <main>
 
-            <h1>Learning possibilities 1-4 step</h1>
+            <section class="container_learning">
+                <div class="item">
+                    <h1>Learning possibilities 1-4 step</h1>
+                </div>
 
-        <img src="images/math.jpg" alt="girl looking at blackboard" class="math">
+                <div class="item">
+                    <img src="images/math.jpg" alt="girl looking at blackboard" class="math">
+                </div>
+
+            </section>
+
+    
 
 
 
