--- a/classLevel.html
+++ b/classLevel.html
@@ -31,7 +31,8 @@
 
             <section class="container_learning">
                 <div class="item">
-                    <h1>Learning possibilities 1-4 step</h1>
+                    <h1>Learning possibilities</h1>
+                    <p>1-4 step</p>
                 </div>
 
                 <div class="item">
