--- a/classLevel.html
+++ b/classLevel.html
@@ -32,7 +32,7 @@
             <section class="container_learning">
                 <div class="item">
                     <h1>Learning possibilities</h1>
-                    <p>1-4 step</p>
+                    <h1>1-4 step</h1>
                 </div>
 
                 <div class="item">
