--- a/classLevel.html
+++ b/classLevel.html
@@ -30,12 +30,12 @@
         <main>
 
             <section class="container_learning">
-                <div class="item">
+                <div class="item4">
                     <h1>Learning possibilities</h1>
                     <h1>1-4 step</h1>
                 </div>
 
-                <div class="item">
+                <div class="item4">
                     <img src="images/math.jpg" alt="girl looking at blackboard" class="math">
                 </div>
 
