--- a/school.html
+++ b/school.html
@@ -31,8 +31,12 @@
         </header>
         <main>
 
+
             <h1>Class step</h1>
-            <a href="classLevel.html">1-4 step</a>
+            <div claas="linkstep">
+                <a href="classLevel.html">1-4 step</a>
+            </div>
+            
 
 
 
