--- a/school.html
+++ b/school.html
@@ -33,7 +33,7 @@
 
 
             <h1>Class step</h1>
-                <a href="classLevel.html">1-4 step</a>
+                <a href="classLevel.html">Click here to see our offers for 1-4 class</a>
            
             
 
