--- a/school.html
+++ b/school.html
@@ -43,7 +43,7 @@
 
 
             <div class="img-pinkblue">
-                <img src="images/blueandpink.jpg" alt="room with pink giraffe and blue rocket">
+                <img src="images/blueandpink.jpg" alt="room with pink giraffe and blue rocket" class="floated_right">
             </div>
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
