--- a/school.html
+++ b/school.html
@@ -30,21 +30,20 @@
 
         </header>
         <main>
+<section class="containerlevel">
 
+    <div class="item">
+    <h1>Class step</h1>
+    <a href="classLevel.html">Click here to see our offers for 1-4 class</a>
+    </div>
 
-            <h1>Class step</h1>
-                <a href="classLevel.html">Click here to see our offers for 1-4 class</a>
+<div class="item">
+    <div class="img-pinkblue">
+        <img src="images/blueandpink.jpg" alt="room with pink giraffe and blue rocket">
+    </div>
+</div>
+</section>
            
-            
-
-
-
-
-
-
-            <div class="img-pinkblue">
-                <img src="images/blueandpink.jpg" alt="room with pink giraffe and blue rocket" class="floated_right">
-            </div>
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
              Molestiae sit explicabo maiores laudantium minus officiis esse ullam 
