--- a/school.html
+++ b/school.html
@@ -32,12 +32,12 @@
         <main>
 <section class="containerlevel">
 
-    <div class="item">
+    <div class="item8">
     <h1>Class step</h1>
     <a href="classLevel.html">Click here to see our offers for 1-4 class</a>
     </div>
 
-<div class="item">
+<div class="item8">
     <div class="img-pinkblue">
         <img src="images/blueandpink.jpg" alt="room with pink giraffe and blue rocket">
     </div>
