--- a/school.html
+++ b/school.html
@@ -53,7 +53,7 @@
 
             <div class="img-school">
                 <div class="item4">
-                    <img src="images/Ant.jpg" alt="big ant in glass" class="floated">
+                    <img src="images/Ant.jpg" alt="big ant in glass">
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur officia nihil provident architecto, eos magni iste porro totam qui natus quia exercitationem, amet placeat aperiam suscipit libero. Labore, quidem laudantium.</p> 
                 </div>
 
