--- a/index.html
+++ b/index.html
@@ -84,11 +84,22 @@
         
 <div class="item">
     <div class="img-icons">
-        <img src="images/facebook.jpg" alt="Icon of facebook">
-        <img src="images/Instagram.jpg" alt="Icon of Instagram">
+        <div class="itemicon">
+            <img src="images/facebook.jpg" alt="Icon of facebook">
+         </div>
+
+         <div class="itemicon">
+            <img src="images/Instagram.jpg" alt="Icon of Instagram">
+         </div>
+
+        <div class="itemicon">
         <img src="images/Tvitter.jpg" alt="Icon of Tvitter">
+        </div>
+
+        <div class="itemicon">
         <img src="images/Snapchat.jpg" alt="Icon of Snapchat">
     </div>
+    
 </div>
             </section>
 
