--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 
 <section class="container_follow">
-    <div class="item">
+    <div class="itemfollow">
         <h2>Follow us</h2>
     </div>
 
