--- a/school.html
+++ b/school.html
@@ -34,7 +34,7 @@
 
     <div class="item8">
     <h1>Class step</h1>
-    <a href="classLevel.html" class="current">Click here to see our offers for 1-4 class</a>
+    <a href="classLevel.html">Click here to see our offers for 1-4 class</a>
     </div>
 
 <div class="item8">
