--- a/school.html
+++ b/school.html
@@ -35,6 +35,8 @@
     <div class="item8">
     <h1>Class step</h1>
     <a href="classLevel.html">Click here to see our offers for 1-4 class</a>
+    <a href="classLevel.html5">Click here to see our offers for 5-7 class</a>
+    <a href="classlevel.html7">Click here to see our offers for 8-10 step</a>
     </div>
 
 <div class="item8">
