--- a/visit.html
+++ b/visit.html
@@ -74,14 +74,42 @@
                 face including global warming, extinction of species, and pollution. 
                 But we also focus on the positive ways we can all contribute to a brighter future.</p>
 
-               <div class="img-visit">
-                   <img src="images/heart-2607178_1920.jpg" alt="Heart science">
-                   <img src="images/man.jpg" alt="boy looking in telescope">
-                   <img src="images/glass.jpg" alt="display in museum">
-                   <img src="images/scell.jpg" alt="three skeletons">
-                   <img src="images/teacher.jpg" alt="teacher cartoon">
-                   <img src="images/ball.jpg" alt="balls">
-               </div>
+
+        <section class="containerv">
+            <div class="itemv">
+
+                <div class="img-visit">
+                    <img src="images/heart-2607178_1920.jpg" alt="Heart science">
+                    <p>Click on the pictures</p>
+                </div>
+
+                <div class="img-visit">
+                    <img src="images/man.jpg" alt="boy looking in telescope">
+                    <p>Click on the picture</p>
+                </div>
+
+                <div class="img-visit">
+                    <img src="images/glass.jpg" alt="display in museum">
+                    <p>Click on the picture</p>
+                </div>
+
+                <div class="img-visit">
+                    <img src="images/scell.jpg" alt="three skeletons">
+                    <p>Click on the picture</p>
+                </div>
+
+                <div class="img-visit">
+                    <img src="images/teacher.jpg" alt="teacher cartoon">
+                    <p>Click on the picture</p>
+                </div>
+
+                <div class="img-visit">
+                    <img src="images/ball.jpg" alt="balls">
+                    <p>Click on the picture</p>
+                </div>
+               </div> 
+            </div>
+          </section> 
 
               
 <section class="container_follow">
