--- a/visit.html
+++ b/visit.html
@@ -76,38 +76,38 @@
 
 
         <section class="containerv">
-            <div class="itemv">
+            <div class="img-visit">
 
-                <div class="img-visit">
+                   <div class="itemv">
                     <img src="images/heart-2607178_1920.jpg" alt="Heart science">
                     <p>Click on the pictures</p>
                 </div>
-
-                <div class="img-visit">
+                
+                <div class="itemv">
                     <img src="images/man.jpg" alt="boy looking in telescope">
                     <p>Click on the picture</p>
                 </div>
 
-                <div class="img-visit">
+                <div class="imtemv">
                     <img src="images/glass.jpg" alt="display in museum">
                     <p>Click on the picture</p>
                 </div>
 
-                <div class="img-visit">
+                <div class="itemv">
                     <img src="images/scell.jpg" alt="three skeletons">
                     <p>Click on the picture</p>
                 </div>
 
-                <div class="img-visit">
+                <div class="itemv">
                     <img src="images/teacher.jpg" alt="teacher cartoon">
                     <p>Click on the picture</p>
                 </div>
 
-                <div class="img-visit">
+                <div class="itemv">
                     <img src="images/ball.jpg" alt="balls">
                     <p>Click on the picture</p>
                 </div>
-               </div> 
+            </div>
           </section> 
 
               
