--- a/visit.html
+++ b/visit.html
@@ -75,6 +75,7 @@
                 But we also focus on the positive ways we can all contribute to a brighter future.</p>
 
 
+                <section class="container9">
 
                 <div class="img-visit">
                     <img src="images/heart-2607178_1920.jpg" alt="Heart science">
@@ -104,6 +105,8 @@
                     <img src="images/ball.jpg" alt="balls">
                     <p>Click on the picture</p>
             </div> 
+
+        </section>
            
      
 
