--- a/school.html
+++ b/school.html
@@ -32,12 +32,19 @@
         <main>
 <section class="containerlevel">
 
-    <div class="item8">
+    <div class="item8"> </div>
     <h1>Class step</h1>
     <a href="classLevel.html">Click here to see our offers for 1-4 class</a>
+</div>
+
+<div class="item8"> 
     <a href="classLevel.html5">Click here to see our offers for 5-7 class</a>
+</div>
+
+<div class="item8"> 
     <a href="classlevel.html7">Click here to see our offers for 8-10 step</a>
-    </div>
+</div>
+    
 
 <div class="item8">
     <div class="img-pinkblue">
