--- a/school.html
+++ b/school.html
@@ -32,7 +32,7 @@
         <main>
 <section class="containerlevel">
 
-    <div class="item8"> </div>
+    <div class="item8">
     <h1>Class step</h1>
     <a href="classLevel.html">Click here to see our offers for 1-4 class</a>
 </div>
