--- a/school.html
+++ b/school.html
@@ -48,7 +48,7 @@
 
 <div class="item8">
     <div class="img-pinkblue">
-        <img src="images/blueandpink.jpg" alt="room with pink giraffe and blue rocket" class="rocket">
+        <img src="images/blueandpink.jpg" alt="room with pink giraffe and blue rocket">
     </div>
 </div>
 </section>
