--- a/classLevel.html
+++ b/classLevel.html
@@ -38,6 +38,7 @@
                 <div class="item4">
                     <img src="images/math.jpg" alt="girl looking at blackboard" class="math">
                 </div>
+            </div>
             </section>     
 
             
