--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         </header>
         <main>
-
+            <section>
             <div class="img-header">
                 <img src="images/Front-space.jpg" alt="space-man">
              </div>
@@ -55,6 +55,9 @@
             <img src="images/dino.jpg" alt="exhibition of dinosaur bones in stairwell">
             <img src="images/elephant.jpg" alt="elephant with light in hall">
             <img src="images/window.jpg" alt="Exhibition of our body skeleton">
+        </section>
+
+        <section>
             <h1>News</h1>
             <h2>Special Events and Exhibitions</h2>
             <img src="images/red.jpg" alt="girl with vr-glasses in red" class="floated"/>
@@ -75,8 +78,10 @@
                    that shows how turbines are able to use and control wind to create power.</p>
                 </p>
         </div>
+        </section>
+   
 
-
+<section>
 <section class="container_follow">
     <div class="itemfollow">
         <h2>Follow us</h2>
@@ -102,6 +107,7 @@
     </div>
 </section>
 </div>
+</section>
           
 
 
