--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         </header>
         <main>
-            <section>
+            <sectionnew>
             <div class="img-header">
                 <img src="images/Front-space.jpg" alt="space-man">
              </div>
@@ -57,7 +57,7 @@
             <img src="images/window.jpg" alt="Exhibition of our body skeleton">
         </section>
 
-        <section>
+        <sectionnew>
             <h1>News</h1>
             <h2>Special Events and Exhibitions</h2>
             <img src="images/red.jpg" alt="girl with vr-glasses in red" class="floated"/>
@@ -81,7 +81,7 @@
         </section>
    
 
-<section>
+<sectionnew>
 <section class="container_follow">
     <div class="itemfollow">
         <h2>Follow us</h2>
