--- a/classLevel.html
+++ b/classLevel.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>1-4 step</title>
         <meta name="description" content="What to do for students 1-4 step">
