--- a/experience.html
+++ b/experience.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>What to experience in the museum</title>
         <meta name="description" content="Some of the things we have at our museum">
