--- a/visit.html
+++ b/visit.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Visit us</title>
         <meta name="description" content="Come and visit us">
