--- a/school.html
+++ b/school.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>School</title>
         <meta name="description" content="For students">
