--- a/about.html
+++ b/about.html
@@ -22,11 +22,11 @@
 
             <nav>
                 <ul>
-                    <li><a href="index.html" class="current">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="experience.html">Experience</a></li>
                     <li><a href="school.html">School</a></li>
                     <li><a href="visit.html">Visit</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li><a href="about.html" class="current">About</a></li>
                 </ul>
             </nav>
 
