--- a/school.html
+++ b/school.html
@@ -23,9 +23,9 @@
           
                       <nav>
                           <ul>
-                              <li><a href="index.html" class="current">Home</a></li>
+                              <li><a href="index.html">Home</a></li>
                               <li><a href="experience.html">Experience</a></li>
-                              <li><a href="school.html">School</a></li>
+                              <li><a href="school.html" class="current">School</a></li>
                               <li><a href="visit.html">Visit</a></li>
                               <li><a href="about.html">About</a></li>
                           </ul>
