--- a/school.html
+++ b/school.html
@@ -47,11 +47,11 @@
 </div>
 
 <div class="item8"> 
-    <a href="classLevel.html5">Click here to see our offers for 5-7 class</a>
+    <a href="classLevel.html5" class="current">Click here to see our offers for 5-7 class</a>
 </div>
 
 <div class="item8"> 
-    <a href="classlevel.html7">Click here to see our offers for 8-10 step</a>
+    <a href="classlevel.html7" class="current">Click here to see our offers for 8-10 step</a>
 </div>
     
 
