--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
             <img src="images/elephant.jpg" alt="elephant with light in hall">
             <img src="images/window.jpg" alt="Exhibition of our body skeleton">
 
+
+           <section class="container_welcome">
             <h1>News</h1>
             <h2>Special Events and Exhibitions</h2>
             <img src="images/red.jpg" alt="girl with vr-glasses in red" class="floated"/>
@@ -74,6 +76,7 @@
                    that shows how turbines are able to use and control wind to create power.</p>
                 </p>
         </div>
+    </section>
    
 
 <section class="container_follow">
