--- a/experience.html
+++ b/experience.html
@@ -45,6 +45,23 @@
             <h1>Experience</h1>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum quos omnis iusto consectetur est adipisci ab molestiae sit, et cupiditate commodi velit tempora, quis dicta non numquam animi suscipit aspernatur.</p>
         </section>
+
+        <section class="container_experiencefun">
+            <div class="itemfun">
+                <img src="images/Painting.jpg" alt="boy painting with vr-glasses">
+                <p>Here you can paint with vr-glasses</p>
+            </div>
+
+            <div class="itemfun">
+                <img src="images/scall.jpg" alt="look inside our head">
+                <p>Come visit us and learn about our brain</p>
+            </div>
+
+            <div class="itemfun">
+                <img src="images/mammut.jpg" alt="mammut scelleton">
+                <p>We also have a big room with</p>
+            </div>
+        </section>
          
 <section class="container_follow">
     <div class="itemfollow">
