--- a/experience.html
+++ b/experience.html
@@ -47,20 +47,7 @@
         </section>
 
         <section class="container_experiencefun">
-            <div class="itemfun">
-                <img src="images/Painting.jpg" alt="boy painting with vr-glasses">
-                <p>Here you can paint with vr-glasses</p>
-            </div>
-
-            <div class="itemfun">
-                <img src="images/scall.jpg" alt="look inside our head">
-                <p>Come visit us and learn about our brain</p>
-            </div>
-
-            <div class="itemfun">
-                <img src="images/mammut.jpg" alt="mammut scelleton">
-                <p>We also have a big room with</p>
-            </div>
+           <p>Explore</p>
         </section>
          
 <section class="container_follow">
