--- a/experience.html
+++ b/experience.html
@@ -46,6 +46,10 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum quos omnis iusto consectetur est adipisci ab molestiae sit, et cupiditate commodi velit tempora, quis dicta non numquam animi suscipit aspernatur.</p>
         </section>
 
+<section class="container_explore">
+    <p>Explore</p>
+</section>
+
          
 <section class="container_follow">
     <div class="itemfollow">
