--- a/experience.html
+++ b/experience.html
@@ -47,7 +47,8 @@
         </section>
 
 <section class="container_explore">
-    <p>Explore</p>
+    <h2>Explore</h2>>
+    <img src="images/Painting.jpg" alt="boy painting with vr-glasses">
 </section>
 
          
