--- a/experience.html
+++ b/experience.html
@@ -48,7 +48,18 @@
 
 <section class="container_explore">
     <h2>Explore</h2>>
-    <img src="images/Painting.jpg" alt="boy painting with vr-glasses">
+    <div class="item_explore">
+        <img src="images/Painting.jpg" alt="boy painting with vr-glasses">
+    </div>
+
+    <div class="item_explore">
+        <img src="images/scall.jpg" alt="see inside our head">
+    </div>
+
+    <div class="item_explore">
+        <img src="images/mammut.jpg" alt="mammut">
+    </div>
+
 </section>
 
          
