--- a/experience.html
+++ b/experience.html
@@ -49,6 +49,7 @@
 <section class="container_explore">
     <h2>Explore</h2>>
     <div class="item_explore">
+        <div class="img-fun">
         <img src="images/Painting.jpg" alt="boy painting with vr-glasses">
     </div>
 
@@ -59,6 +60,7 @@
     <div class="item_explore">
         <img src="images/mammut.jpg" alt="mammut">
     </div>
+</div>
 
 </section>
 
