--- a/experience.html
+++ b/experience.html
@@ -54,10 +54,12 @@
     </div>
 
     <div class="item_explore">
+        <div class="img-fun">
         <img src="images/scall.jpg" alt="see inside our head">
     </div>
 
     <div class="item_explore">
+        <div class="img-fun">
         <img src="images/mammut.jpg" alt="mammut">
     </div>
 </div>
