--- a/school.html
+++ b/school.html
@@ -39,7 +39,7 @@
 
         </header>
         <main>
-            
+
 <section class="containerlevel">
 
     <div class="item8">
@@ -63,11 +63,13 @@
 </div>
 </section>
            
+<section class="container_text">
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
              Molestiae sit explicabo maiores laudantium minus officiis esse ullam 
              possimus nemo laborum velit aliquam impedit debitis autem quibusdam cum, 
              nobis natus fuga.</p> 
+       </section>
 
 
             <div class="img-school">
