--- a/classLevel.html
+++ b/classLevel.html
@@ -52,7 +52,7 @@
             </section>     
 
             
-
+<section class="container_learning">
            <div class="img-front4">
                <div class="item4">
                 <img src="images/mammut.jpg" alt="mmammoth skeleton">
@@ -70,6 +70,7 @@
             </div>
            
            </div>
+        </section>
 
            <section class="container_follow">
             <div class="itemfollow">
