--- a/classLevel.html
+++ b/classLevel.html
@@ -52,7 +52,7 @@
             </section>     
 
             
-<section class="container_learning">
+<section class="container_learning2">
            <div class="img-front4">
                <div class="item4">
                 <img src="images/mammut.jpg" alt="mmammoth skeleton">
