--- a/about.html
+++ b/about.html
@@ -38,6 +38,7 @@
         </header>
         <main>
 
+<section class="container_about"> 
             <div class="img-header">
                 <img src="images/Front-space.jpg" alt="space-man">
              </div>
@@ -132,6 +133,8 @@
                 You’ll be learning from a number of different academics and people who are
                 passionate about science and sharing it with the wider community.
                 </p> 
+
+            </section>
 
 
                 <section class="container_follow">
