--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
            <section class="container_welcome">
             <h1>News</h1>
             <h2>Special Events and Exhibitions</h2>
-            <img src="images/red.jpg" alt="girl with vr-glasses in red"/>
+            <img src="images/red.jpg" alt="girl with vr-glasses in red" class="floated">
             <h3>Visiting Professor of Aeronautics</h3>
                 <p>It is our pleasure to announce that Prof Sheila Widnall 
                     from the Massachusetts Institute of Technology will be delivering 
