--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 
 
            <section class="container_welcome">
+               <img src="images/red.jpg" alt="girl with vr-glasses in red" class="float"/>
             <h1>News</h1>
             <h2>Special Events and Exhibitions</h2>
             <h3>Visiting Professor of Aeronautics</h3>
