--- a/experience.html
+++ b/experience.html
@@ -47,7 +47,7 @@
         </section>
 
 <section class="container_explore">
-    <h2>Explore</h2>>
+    <h2>Explore</h2>
     <div class="item_explore">
         <div class="img-fun">
         <img src="images/Painting.jpg" alt="boy painting with vr-glasses">
