--- a/experience.html
+++ b/experience.html
@@ -47,8 +47,8 @@
                  accessible to all.
                  Over the course of human history, science has developed from our early understanding 
                  of fire, wind, water, and earth to exploring everything from galaxies far away to the 
-                 very building blocks of life itself.
-                 The aim of our museum is to create a space where everyone can experience the wonders of 
+                 very building blocks of life itself.</p>
+                 <p>The aim of our museum is to create a space where everyone can experience the wonders of 
                  our discoveries and perhaps even ignite a lifelong passion to continue the exploration
                  of the world around us.
                  We believe science should not be confined to the textbook, but brought to live through
