--- a/visit.html
+++ b/visit.html
@@ -23,11 +23,11 @@
           
                       <nav>
                           <ul>
-                              <li><a href="index.html">Home</a></li>
-                              <li><a href="experience.html">Experience</a></li>
-                              <li><a href="school.html">School</a></li>
-                              <li><a href="visit.html" class="current">Visit</a></li>
-                              <li><a href="about.html">About</a></li>
+                              <li><a href="index.html"> Home</a></li>
+                              <li><a href="experience.html"> Experience</a></li>
+                              <li><a href="school.html"> School</a></li>
+                              <li><a href="visit.html"> class="current" Visit</a></li>
+                              <li><a href="about.html"> About</a></li>
                           </ul>
                       </nav>
           
