--- a/visit.html
+++ b/visit.html
@@ -26,7 +26,7 @@
                               <li><a href="index.html"> Home</a></li>
                               <li><a href="experience.html"> Experience</a></li>
                               <li><a href="school.html"> School</a></li>
-                              <li><a href="visit.html"> class="current" Visit</a></li>
+                              <li><a href="visit.html" class="current"> Visit</a></li>
                               <li><a href="about.html"> About</a></li>
                           </ul>
                       </nav>
