--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
            <section class="container_welcome">
                <img src="images/red.jpg" alt="girl with vr-glasses in red" class="float"/>
-            <h1>News</h1>
+            <h1>News</h1><p></p>
             <h2>Special Events and Exhibitions</h2>
             <h3>Visiting Professor of Aeronautics</h3>
                 <p>It is our pleasure to announce that Prof Sheila Widnall 
